force-app/main/default/objects/Contact_Classification__c/Contact_Classification__c.object-meta.xml
<CustomObject>
    <description>Stores AI-generated or heuristic contact role classifications for the Relationship Graph.</description>
    <label>Contact Classification</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Classification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>