force-app/main/default/objects/Contact_Classification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The account context for this classification.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Classifications</relationshipLabel>
    <relationshipName>Contact_Classifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>