force-app/main/default/objects/Contact_Classification__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <description>How confident the classifier is in this classification (0.0 to 1.0).</description>
    <label>Confidence Score</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>