force-app/main/default/objects/Contact_Classification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The contact being classified.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Classifications</relationshipLabel>
    <relationshipName>Classifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>