force-app/main/default/objects/Contact_Classification__c/fields/Is_User_Override__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this classification was manually set by a user (overriding AI).</description>
    <label>User Override</label>
    <type>Checkbox</type>
</CustomField>