force-app/main/default/objects/Contact_Classification__c/fields/Last_Classified__c.field-meta.xml
<CustomField>
    <fullName>Last_Classified__c</fullName>
    <description>When this contact was last classified.</description>
    <label>Last Classified</label>
    <type>DateTime</type>
</CustomField>