force-app/main/default/objects/Contact_Classification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Which AI provider generated this classification (e.g., Agentforce, Heuristic, UserOverride).</description>
    <label>Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>